connected database, added some front-end classes, added back-end classes for news and object launche api's